<resources>
    <string name="app_name">EDC Implementation Tracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_sample_user_name">User Name</string>
    <string name="text_sample_branch_name">Branch Name</string>
    <string name="text_brilink">Brilink</string>
    <string name="text_merchant">Merchant</string>
    <string name="text_uko">UKO</string>
    <string name="text_sample_tid">1000297680</string>
    <string name="text_sample_agen_name">Sutisna Prakoso</string>
    <string name="text_sample_agent_address">Jl. Kramat Setu Bintara 9 No.121 RT03/01 Kel.Bintara Jaya Kec. Bekasi Barat</string>
    <string name="title_tab_staging">Staging</string>
    <string name="title_activity_home">EDC</string>
    <string name="title_tab_onprogress">On Progress</string>
    <string name="title_tab_completed">Completed</string>
    <string name="dialog_msg_error_fetch_edc">An error has occured, failed to get EDC data.</string>
    <string name="text_error_no_data_found">No Data Found</string>
    <string name="toolbar_title_brilink">Brilink</string>
    <string name="toolbar_title_merchant">Merchant</string>
    <string name="toolbar_title_uko">UKO</string>
    <string name="title_tab_verified">Verified</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="text_detail_edc">Detail EDC</string>
    <string name="text_sample_edc_name">Agent/Merchant Name</string>
    <string name="text_edc_detail_name">Agent / Merchant / Uker</string>
    <string name="text_edc_detail_address">Address</string>
    <string name="text_sample_sn_edc">EDC Serial Number Here</string>
    <string name="text_edc_detail_sn_edc">Device Serial Number</string>
    <string name="text_edc_detail_sn_sim">Sim Card Serial Number</string>
    <string name="text_sample_sn_sim">Simcard Serial Number Here</string>
    <string name="text_sample_desc">EDC sudah dipasang pada agen brilink</string>
    <string name="text_edc_detail_desc">Description</string>
    <string name="text_edc_detail_ba">Berita Acara</string>
    <string name="text_edc_detail_photo">Photo</string>
    <string name="text_button_submit">Submit</string>
    <string name="input_type_text">TEXT</string>
    <string name="err_edc_detail_agent_length">Name should not be more than 40 characters</string>
    <string name="dialog_title_input_agent">Agent / Merchant / Uker</string>
    <string name="dialog_title_input_sn_edc">Input Device Serial Number</string>
    <string name="dialog_title_input_sn_edc_hint">Serial Number EDC</string>
    <string name="text_sample_text">Text</string>
    <string name="text_button_cancel">Cancel</string>
    <string name="text_button_ok">Ok</string>
    <string name="err_edc_detail_sn_edc_length">SN should not be more than 15 characters</string>
    <string name="dialog_title_input_sn_sim_hint">Serial Number Simcard</string>
    <string name="err_edc_detail_sn_sim_length">SN should not be more than 15 characters</string>
    <string name="err_edc_detail_edc_phone_length">Phone Number should not be less than 5 characters</string>
    <string name="dialog_title_input_sn_sim">Input Serial Number Simcard</string>
    <string name="dialog_title_input_edc_desc">Input Description</string>
    <string name="dialog_title_input_edc_desc_hint">EDC Description</string>
    <string name="dialog_title_input_edc_phone">Input Phone Number</string>
    <string name="dialog_title_input_edc_phone_hint">Your Phone Number</string>
    <string name="err_edc_detail_edc_desc_length">Description should not be more than 255 characters</string>
    <string name="permission_rationale_camera">Camera permission is needed for continuing your action.</string>
    <string name="permission_rationale_storage">Write storage permission is needed for continuing your action.</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="action_cancel">Cancel</string>
    <string name="dialog_title_select_image_from">Select Picture From</string>
    <string name="msg_device_no_camera">Your device has no camera</string>
    <string name="dialog_title_select_picture">Select Picture</string>
    <string name="txt_dialog_please_wait">Please wait...</string>
    <string name="txt_title_upload_data_edc">Uploading data</string>
    <string name="txt_title_verify_data_edc">Verifying data</string>
    <string name="err_edc_detail_image_null">Please take a photo first.</string>
    <string name="dialog_msg_error_upload_implementation_edc">An error has ocurred, please try again.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_app_logo">EDC Implementation Tracker</string>
    <string name="hint_edit_personal_number">Personal Number</string>
    <string name="hint_edit_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="text_login_help">Help!</string>
    <string name="err_msg_not_valid_pn">Invalid Personal Number</string>
    <string name="dialog_msg_error_login">An error has occurred, please try again later.</string>
    <string name="action_logout">Logout</string>
    <string name="dialog_msg_logout_confirmation">Are you sure want to logout?</string>
    <string name="dialog_msg_submit_confirmation">Are you sure want to submit this data?</string>
    <string name="dialog_msg_verify_confirmation">Are you sure want to verify this data?</string>
    <string name="dialog_msg_cancel_confirmation">Are you sure want to cancel this data?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="text_button_verify">Verify</string>
    <string name="text_impl_branch">Kanwil Jakarta 3</string>
    <string name="text_edc_detail_phone">Phone Number</string>
    <string name="text_sample_phone">Your Phone Number Here</string>
    <string name="input_type_phone">PHONE</string>
    <string name="action_ok">OK</string>
    <string name="dialog_msg_help_login">Please login using Kanwil Jakarta 3 user credentials.\nCall Kanwil Jakarta 3 for more help.</string>
</resources>
