<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:id="@+id/content_submit">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_edc_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="@dimen/button_submit_height"
        tools:context="app.rbzeta.edcimplementationtracker.activity.SubmitActivityFragment">

        <LinearLayout
            android:id="@+id/container_edc_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_linear_shadow"
            android:divider="?android:listDivider"
            android:dividerPadding="2.5dp"
            android:focusable="true"
            android:orientation="vertical"
            android:showDividers="middle"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/container_edc_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_edc_detail_name_value"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/text_sample_edc_name" />

                <TextView
                    android:id="@+id/text_edc_detail_name_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_edc_detail_address_value"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/text_sample_agent_address" />

                <TextView
                    android:id="@+id/text_edc_detail_address_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_address" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_sn_edc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_edc_detail_sn_edc_value"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/text_sample_sn_edc" />

                <TextView
                    android:id="@+id/text_edc_detail_sn_edc_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_sn_edc" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_sn_sim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_edc_detail_sn_sim_value"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/text_sample_sn_sim" />

                <TextView
                    android:id="@+id/text_edc_detail_sn_sim_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_sn_sim" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_edc_detail_phone_value"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/text_sample_phone" />

                <TextView
                    android:id="@+id/text_edc_detail_phone_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_phone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_edc_detail_desc_value"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:text="@string/text_sample_desc" />

                <TextView
                    android:id="@+id/text_edc_detail_desc_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_desc" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_ba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_edc_detail_ba_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_ba"
                    android:textAlignment="center" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_picture_ba"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.ProgressBar"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/img_edc_detail_ba"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:clickable="true"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_menu_camera" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_edc_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_edc_detail_photo_text"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:text="@string/text_edc_detail_photo"
                    android:textAlignment="center" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progress_picture_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Base.Widget.AppCompat.ProgressBar"
                        android:layout_centerInParent="true"
                        android:visibility="gone"/>

                    <ImageView
                        android:id="@+id/img_edc_detail_photo"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:clickable="true"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_menu_camera" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/button_edc_detail_submit"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_submit_height"
        android:text="@string/text_button_submit"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"/>
    <Button
        android:id="@+id/button_edc_detail_verify"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_submit_height"
        android:text="@string/text_button_verify"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:visibility="gone"/>
    <Button
        android:id="@+id/button_edc_detail_cancel"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_submit_height"
        android:text="@string/text_button_cancel"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:visibility="gone"/>

</RelativeLayout>

