<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical|center_horizontal" />

    <ScrollView
        android:id="@+id/scroll_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="50dp">

            <!-- Login progress -->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_credit_card_white_24dp"
                android:layout_gravity="bottom|center_horizontal"/>

            <TextView
                android:id="@+id/text_login_app_name"
                android:text="@string/text_app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="30dp"/>

            <!--<TextView
                android:id="@+id/textAppLogoDesc"
                android:text="@string/text_app_logo_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="@color/white"
                android:textStyle="italic"
                android:textSize="12sp"
                android:layout_marginBottom="30dp" />-->

            <LinearLayout
                android:id="@+id/linear_pn_password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/lightGrey"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/edit_login_personal_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_edit_personal_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="18sp"
                        android:textColorLink="@color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/lightGrey"
                    app:hintEnabled="false">

                    <EditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_edit_password"
                        android:imeActionId="@+id/editPasswordLoginIme"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:textColorHint="@color/lightGrey"
                        android:textSize="18sp"
                        android:textColorLink="@color/white"
                        android:textCursorDrawable="@null"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button_login_submit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_button_login"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/lightGrey"
                    android:layout_marginBottom="20dp"
                    android:layout_height="35dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_login_help"
                android:text="@string/text_login_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center_vertical|center_horizontal" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>